Update Java 10 and 11 command line options